--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "lib_blaster"
-version = "0.3.0"
+version = "0.3.1"
 authors = ["LEXUGE <LEXUGEyky@outlook.com>"]
 description = "The backend of blaster (a SYN flood tool)"
 license = "AGPL-3.0"
@@ -11,3 +11,10 @@ pnet_macros_support = "0.21"
 pnet_packet = "0.21"
 pnet_transport = "0.21"
 rand = "0.5"
+
+[dev-dependencies]
+criterion = "0.2"
+
+[[bench]]
+name = "benchmark"
+harness = false
